--- a/Android/LB.csproj
+++ b/Android/LB.csproj
@@ -47,9 +47,10 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Activities\MainActivity.cs" />
+    <Compile Include="Helpers\Helpers.cs" />
     <Compile Include="Adapters\BattleListAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -63,6 +64,7 @@
     <AndroidResource Include="Resources\drawable\Icon.png" />
     <AndroidResource Include="Resources\layout\BattleListItem.axml" />
     <AndroidResource Include="Resources\drawable\lb.png" />
+    <AndroidResource Include="Resources\layout\ScenarioListItem.axml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
@@ -73,6 +75,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Adapters\" />
+    <Folder Include="Activities\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\BattleDB.xml" />
