--- a/Android/LB.csproj
+++ b/Android/LB.csproj
@@ -71,6 +71,8 @@
     <AndroidResource Include="Resources\layout\MainTitlebar.axml" />
     <AndroidResource Include="Resources\values\Style.xml" />
     <AndroidResource Include="Resources\drawable\red_button.xml" />
+    <AndroidResource Include="Resources\layout\SubTitlebar.axml" />
+    <AndroidResource Include="Resources\drawable\ic_ab_back_holo_dark.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
