--- a/Android/Properties/AndroidManifest.xml
+++ b/Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="LB.LB">
 	<uses-sdk android:targetSdkVersion="8" />
-	<application android:theme="@android:style/Theme.Black" android:icon="@drawable/lb" android:label="La Bataille Assistant"></application>
+	<application android:theme="@android:style/Theme.Black.NoTitleBar" android:icon="@drawable/icon" android:label="La Bataille Assistant"></application>
 </manifest>
