--- a/Android/LB.csproj
+++ b/Android/LB.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Activities\FireCombatActivity.cs" />
     <Compile Include="Helpers\DiceResources.cs" />
     <Compile Include="Helpers\PlayAudio.cs" />
+    <Compile Include="Activities\MoraleActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -121,6 +122,7 @@
     <AndroidResource Include="Resources\drawable\fire.png" />
     <AndroidResource Include="Resources\drawable\melee.png" />
     <AndroidResource Include="Resources\drawable\morale.png" />
+    <AndroidResource Include="Resources\layout\Morale.axml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
