--- a/Android/LB.csproj
+++ b/Android/LB.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Helpers\PlayAudio.cs" />
     <Compile Include="Activities\MoraleActivity.cs" />
     <Compile Include="Activities\GeneralActivity.cs" />
+    <Compile Include="Activities\MeleeActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -125,6 +126,7 @@
     <AndroidResource Include="Resources\drawable\morale.png" />
     <AndroidResource Include="Resources\layout\Morale.axml" />
     <AndroidResource Include="Resources\layout\General.axml" />
+    <AndroidResource Include="Resources\layout\Melee.axml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
